--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Film Folio</title>
     <link rel="stylesheet" href="/Assets/homepage.css">
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.7/dist/handlebars.min.js"></script>
+
     <script src="/server.js"></script>
 </head>
 
 <body>
 
     <script id="home-template" type="text/x-handlebars-template">
-     <header>
-        <h1>Film Folio</h1>
-    </header>
+        <header>
+            <h1>Film Folio</h1>
+        </header>
 
         <nav>
             {{#each navLinks}}
@@ -54,7 +56,9 @@
         var template = Handlebars.compile(source);
         var html = template(data);
 
-        document.body.innerHTML = html;
+        var container = document.createElement('div');
+        container.innerHTML = html;
+        document.body.appendChild(container);
     </script>
 
 </body>
