--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <title>FilmFolio</title>
     <link rel="stylesheet" href="../../public/css/jass.css">
     <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="stylesheet" href="../../Assets/homepage.css">
 </head>
 <body>
     <header>
