--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FilmFolio</title>
-    <link rel="stylesheet" href="../../public/css/jass.css">
     <link rel="stylesheet" href="../../public/css/style.css">
-    <link rel="stylesheet" href="../../Assets/homepage.css">
+    
+    
 </head>
 <body>
     <header>
         <h1>FilmFolio</h1>
-        <!-- Navigation links can be added here -->
+        <p>Login/Sign Up</p>
     </header>
 
     <main>
@@ -23,7 +23,6 @@
         <p>&copy; 2024 FILMFOLIO</p>
     </footer>
 
-    <!-- Additional scripts can be included here -->
     <script src="../../public/js/login.js" defer></script>
     <script src="../../public/js/logout.js" defer></script>
 </body>
