--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FilmFolio</title>
-    <link rel="stylesheet" href="../../public/css/jass.css">
-    <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="stylesheet" href="/css/jass.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
     </footer>
 
     <!-- Additional scripts can be included here -->
-    <script src="../../public/js/login.js" defer></script>
-    <script src="../../public/js/logout.js" defer></script>
+    <script src="/js/login.js" defer></script>
+    <script src="/js/logout.js" defer></script>
 </body>
 </html>
