--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -21,4 +21,4 @@
     No active reviews from this account.
 </div>
 
-<script src="./js/profile.js"></script>
+<script src="/js/profile.js"></script>
