minor edits to login and movie handlebars pages

--- a/views/movie.handlebars
+++ b/views/movie.handlebars
@@ -7,7 +7,7 @@
     </div>
     
     <div class="movie-info">
-      <p>director: {{Movie.director}}</p>
+      <p>Director: {{Movie.director}}</p>
       <p>Genre: {{Movie.genre}}</p>
       <p>Release Date: {{Movie.release_date}}</p>
     </div>
