--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,4 +10,5 @@
 
     <button type="button" onclick="validateLogin()">Login</button>
 
-    <script src="script.js" defer></script>
+    <script src="login.js" defer></script>
+   </form>
