--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,39 +1,81 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
+/* main.handlebars standard styles */
+
+html {
+    height: 100%;
+    
+  }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #4E0110;
+    color: #0C0910;
     padding: 10px;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-nav {
-    display: flex;
-    justify-content: space-around;
-    background-color: #555;
-    padding: 10px;
-    color: white
+h1 {
+    font-size: 50px;
+}
+
+a {
+    color: #8F3985;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: #A2AEBB;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+
+  .logo-image {
+    object-fit: cover;
+    width: 50%;
+    height: 150px; /* Set the desired fixed height */
+    object-position: center;
+  }
+
+#loginBtn {
+    align-self: center;
+    background-color: #0C0910;
+    padding: 5px;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #881600;
 }
+
+main {
+    height: 100%;
+    flex: 1;
+    color: #8F3985;
+}
+
+footer {
+    padding: 10px;
+    text-align: center;
+    background-color: #4E0110;
+}
+
+/* homepage.handlebars additional styles */
 
 .container {
     max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #eb2020;
+    background-color: #881600;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px #0C0910 (0, 0, 0, 0.1);
     text-align: center;
     display: flex;
     flex-wrap: wrap;
@@ -42,16 +84,21 @@ body {
 
 .genre-buttons {
     margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-top: 150px;
 }
 
 .genre-button {
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 21px;
     margin: 5px;
     text-decoration: none;
-    background-color: #ddd;
-    color: #333;
-    border: 1px solid #aaa;
+    background-color: #0C0910;
+    color: #A2AEBB;
+    border: 1px solid #0C0910;
     border-radius: 50%; 
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -59,6 +106,13 @@ body {
     width: 80px; 
     height: 80px;
     line-height: 80px; 
+    text-align: center;
+}
+
+
+
+.genre-button:hover {
+    background-color: #A2AEBB;
 }
 
 .central-circle {
@@ -66,6 +120,32 @@ body {
     margin: auto; 
 }
 
-.genre-button:hover {
-    background-color: #ccc;
+form {
+    background-color: #A2AEBB;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
 }
+
+label {
+    display: block; 
+    margin-bottom: 8px;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 8px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #881600;
+    color: #A2AEBB;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
