--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,21 +1,26 @@
-
-    <script id="home-template" type="text/x-handlebars-template">
-    
-
-        <nav>
-            {{#each navLinks}}
-            <a href="{{ link }}">{{ label }}</a>
-            {{/each}}
-        </nav>
-
-        <div class="container">
-            <div class="genre-buttons">
-                {{#each genreButtons}}
-                <a class="genre-button" href="{{ link }}">{{ name }}</a>
-                {{/each}}
-            </div>
-        </div>
-    </script>
+<section class="genre-buttons">
+    <div class="genre-button">
+        <a href="/genre/1">Action</a>
+    </div>
+    <div class="genre-button">
+        <a href="/genre/2">Comedy</a>
+    </div>
+    <div class="genre-button">
+        <a href="/genre/3">Drama</a>
+    </div>
+    <div class="genre-button">
+        <a href="/genre/4">Horror</a>
+    </div>
+    <div class="genre-button">
+        <a href="/genre/5">Romance</a>
+    </div>
+    <div class="genre-button">
+        <a href="/genre/6">Thriller</a>
+    </div>
+    <div class="genre-button">
+        <a href="/genre/7">Sci-Fi</a>
+    </div>
+</section>
 
     <script src="/public/js/homepage.js"></script>
 
