finishing login/logout/sign up feature, and seed cleaning.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,33 @@
+<section>
+    <div>
+        <a href="/genre/1">Action</a>
+    </div>
+    <div>
+        <a href="/genre/2">Comedy</a>
+    </div>
+    <div>
+        <a href="/genre/3">Drama</a>
+    </div>
+    <div>
+        <a href="/genre/4">Horror</a>
+    </div>
+    <div>
+        <a href="/genre/5">Romance</a>
+    </div>
+    <div>
+        <a href="/genre/6">Thriller</a>
+    </div>
+    <div>
+        <a href="/genre/7">Sci-Fi</a>
+    </div>
+</section>
 
-    <script id="home-template" type="text/x-handlebars-template">
+
+
+
+{{!-- <script src="/public/js/homepage.js"></script> --}}
+
+{{!-- <script id="home-template" type="text/x-handlebars-template">
     
 
         <nav>
@@ -15,8 +43,23 @@
                 {{/each}}
             </div>
         </div>
-    </script>
+    </script> --}}
 
-    <script src="/public/js/homepage.js"></script>
-
-    
+{{!-- <div>
+{{#each genre as |genres|}}
+{{> moviecard}}
+<div>
+    <div>
+        <h3>
+            <a href='/genre/{{id}}'>{{name}}</a>
+        </h3>
+    </div>
+</div>
+<div>
+    Homepage is working in loop!
+</div>
+{{/each}}
+</div>
+<div>
+    Homepage is working
+</div> --}}
