--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,11 +11,11 @@
 <body>
     <header>
        <h1><a href="/">FilmFolio</a></h1>
-        {{#if isLoggedIn}}
+        {{!-- {{#if isLoggedIn}}
             <a href="/profile" class="btn">Access Profile</a>
         {{else}}
             <a href="/login" class="btn">Sign Up</a>
-        {{/if}}
+        {{/if}} --}}
     </header>
 
     <main>
@@ -23,11 +23,11 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 FILMFOLIO</p>
+        <p> 2024 FILMFOLIO</p>
     </footer>
 
     <!-- Additional scripts can be included here -->
-    <script src="/js/login.js" defer></script>
-    <script src="/js/logout.js" defer></script>
+    {{!-- <script src="/js/login.js" defer></script>
+    <script src="/js/logout.js" defer></script> --}}
 </body>
 </html>
