--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,37 +1,4 @@
-
-   <!--Login Page-->
-   <form id="loginForm">
-    <h2>Login</h2>
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" autocomplete="username" required>
-
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" autocomplete="current-password" required>
-
-    <button type="button" onclick="validateLogin()">Login</button>
-
-    <script src="script.js" defer></script>
-
-
-<div class="row">
-   <div class="col-md-6">
-      <h2>Login</h2>
-
-      <form class="form login-form">
-         <div class="form-group">
-            <label for="email-login">email:</label>
-            <input class="form-input" type="text" id="email-login" />
-         </div>
-         <div class="form-group">
-            <label for="password-login">password:</label>
-            <input class="form-input" type="password" id="password-login" />
-         </div>
-         <div class="form-group">
-            <button class="btn btn-primary" type="submit">login</button>
-         </div>
-      </form>
-   </div>
-   <div class="col-md-6">
+  <div>
       <h2>Signup</h2>
 
       <form class="form signup-form">
@@ -53,5 +20,24 @@
       </form>
    </div>
 </div>
+
+<div>
+   <div>
+      <h2>Login</h2>
+
+      <form class="form login-form">
+         <div class="form-group">
+            <label for="email-login">email:</label>
+            <input class="form-input" type="text" id="email-login" />
+         </div>
+         <div class="form-group">
+            <label for="password-login">password:</label>
+            <input class="form-input" type="password" id="password-login" />
+         </div>
+         <div class="form-group">
+            <button class="btn btn-primary" type="submit">login</button>
+         </div>
+      </form>
+   </div>
 
 <script src="./js/login.js"></script>
