gsap animation active on handlebars.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,11 +24,12 @@
     </main>
 
     <footer>
-        <p> 2024 FILMFOLIO</p>
+        <p>2024 FILMFOLIO</p>
     </footer>
 
     <!-- Additional scripts can be included here -->
     {{!-- <script src="/js/login.js" defer></script>
     <script src="/js/logout.js" defer></script> --}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
 </body>
 </html>
